@@ -2,6 +2,7 @@
         Extended config changes to examples/reindex.pl (thanks jimbo).
         Now require CGI::Wiki 0.62 to fix bug with deleting versions.
         Try to ensure that a .htaccess file protecting wiki.conf is installed.
+        Allow for external URLs for Text Formatting help.
 
 0.46	21 December 2004
         Minor bug fixes: remove bogus edit link on index listings,
